test/1.2/errors/T_WDEPRECATED.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

event E {
    /// WARNING WDEPRECATED
    parameter timebase = "stacked";
    method event(void *data) {
        log "info": "%s happened", $qname;
    }
}
